Add event debug hook support to the event manager